argocd-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pruthvi-sample-app
  name: pruthvi-sample-app
  namespace: openshift-ztp
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: pruthvi-sample-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pruthvi-sample-app
        deployment: pruthvi-sample-app
    spec:
      containers:
      - image: quay.io/openshifttest/deployment-example:latest
        imagePullPolicy: Always
        name: pruthvi-sample-app
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
