argocd-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pruthvi-sample-app-service
  namespace: openshift-ztp
  labels:
    app: pruthvi-sample-app
spec:
  selector:
    app: pruthvi-sample-app
  ports:
  - protocol: TCP
    port: 80          # Port to expose inside the cluster
    targetPort: 8080  # Container port your app listens on
  type: ClusterIP     # You can change to NodePort or LoadBalancer if needed
