argocd-app/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: openshift-ztp
  labels:
    run: nginx-service
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: nginx-pod
