argocd-app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: deployment-example
  name: deployment-example
  namespace: openshift-ztp
spec:
  host: deployment-example-openshift-ztp.apps.cbco.sandbox215.opentlc.com
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: deployment-example
    weight: 100
  wildcardPolicy: None
